--- a/package.json
+++ b/package.json
@@ -43,17 +43,21 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-knex": "^7.1.0",
+    "feathers-nedb": "^5.1.0",
     "helmet": "^3.21.2",
     "knex": "^0.20.4",
     "mysql2": "^2.1.0",
+    "nedb": "^1.8.0",
+    "node-ssh": "^8.0.0",
     "serve-favicon": "^2.5.0",
+    "ssh-exec": "^2.0.0",
+    "tunnel-ssh": "^4.1.4",
     "utf-8-validate": "^5.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
     "eslint": "^6.7.2",
-    "jest": "^24.9.0",
     "nodemon": "^2.0.2"
   }
 }
